[gd_scene load_steps=9 format=3 uid="uid://c3leiijt46i16"]

[ext_resource type="Texture2D" uid="uid://bjt8ej8cdypby" path="res://assets/Slime/slime_death_01.png" id="1_t6l8y"]
[ext_resource type="Script" path="res://scripts/enemy/slime.gd" id="1_u4rla"]
[ext_resource type="Texture2D" uid="uid://dnlohvhpr65p3" path="res://assets/Slime/slime_death_02.png" id="2_1v21s"]
[ext_resource type="Texture2D" uid="uid://duqqsjsmaoj0r" path="res://assets/Slime/slime_stand_01.png" id="3_78jlx"]
[ext_resource type="Texture2D" uid="uid://dmnk6680rvcbb" path="res://assets/Slime/slime_stand_02.png" id="4_6o1nq"]
[ext_resource type="Texture2D" uid="uid://bpllulsbq2cev" path="res://assets/Slime/slime_stand_03.png" id="5_x0sce"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iuqu1"]
radius = 160.0

[sub_resource type="SpriteFrames" id="SpriteFrames_lw3mp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_t6l8y")
}, {
"duration": 1.0,
"texture": ExtResource("2_1v21s")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_78jlx")
}, {
"duration": 1.0,
"texture": ExtResource("4_6o1nq")
}, {
"duration": 1.0,
"texture": ExtResource("5_x0sce")
}, {
"duration": 1.0,
"texture": ExtResource("3_78jlx")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}]

[node name="Slime" type="CharacterBody2D" groups=["slime"]]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_u4rla")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -36)
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_iuqu1")

[node name="Animated" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -36)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_lw3mp")
animation = &"stand"
autoplay = "stand"

[node name="Ray_Right" type="RayCast2D" parent="."]
position = Vector2(0, -32)
target_position = Vector2(40, 0)

[node name="Ray_Left" type="RayCast2D" parent="."]
position = Vector2(0, -33)
target_position = Vector2(-40, 0)

[node name="Ray_Down_Right" type="RayCast2D" parent="."]
position = Vector2(38, -33)
target_position = Vector2(0, 40)

[node name="Ray_Down_Left" type="RayCast2D" parent="."]
position = Vector2(-35, -33)
target_position = Vector2(0, 40)
